Criada logica elemento create-room

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
     <app-header></app-header>
-    <app-list-rooms></app-list-rooms>
+    <router-outlet></router-outlet>
 </div>
