--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -1,8 +1,1 @@
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-        <h5 class="card-title text-center">{{"sala " + (roomIndex + 1)}}</h5>
-        <p class="card-text">{{"Capacidade: " + room.playersQuantity}}</p>
-        <p class="card-text">{{"Jogadores aguardando: " + room.playersInTheRoom}}</p>
-        <button class="btn btn-primary">Entrar</button>
-    </div>
-</div>
+<p>room works!</p>
