--- a/src/app/components/room-list-item/room-list-item.component.html
+++ b/src/app/components/room-list-item/room-list-item.component.html
@@ -1,8 +1,62 @@
-<div class="card" style="width: 18rem;">
+@if (room) {
+@if (room.playersInTheRoom < room.playersQuantity) { <div class="card" style="width: 18rem;">
     <div class="card-body">
         <h5 class="card-title text-center">{{"sala " + (roomIndex + 1)}}</h5>
         <p class="card-text">{{"Capacidade: " + room.playersQuantity}}</p>
         <p class="card-text">{{"Jogadores aguardando: " + room.playersInTheRoom}}</p>
-        <button class="btn btn-primary">Entrar</button>
+        <form [formGroup]="form" (ngSubmit)="enterRoom(room.key)">
+            <div class="modal-body">
+                <div class="form-floating mt-3">
+                    <input type="text" class="form-control" id="userName" name="userName" formControlName="userName">
+                    <label for="floatingInput">Ao entrar seu apelido será</label>
+                </div>
+
+                <div style="color:rgb(167, 11, 11);height: 30px;">
+                    @if (form.get("userName")?.errors?.["required"] && form.get("userName")?.touched) {
+                    Um apelido deve ser informado
+                    }
+                </div>
+
+
+            </div>
+
+            @if (!form.invalid) {
+            <button class="btn btn-primary" type="submit" style="width: 100%;">Entrar</button>
+            }
+            @else {
+            <button class="btn btn-primary" style="width: 100%;" disabled>Entrar</button>
+            }
+        </form>
     </div>
-</div>
+    </div>
+    }
+    }
+
+
+    <!-- Modal 
+    <div class="modal fade" id="ModalGetUserName" tabindex="-1" aria-labelledby="ModalGetUserNameLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="ModalGetUserNameLabel">Informe seu apelido</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form [formGroup]="form" (ngSubmit)="enterRoom()">
+                    <div class="modal-body">
+                        <div class="form-floating mt-3 mb-3">
+                            <input type="text" class="form-control" id="userName" name="userName"
+                                formControlName="userName">
+                            <label for="floatingInput">Nome</label>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Continuar para a sala
+                            {{room.key}}</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>-->
